<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kedai"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="50dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="Logo Kasir"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cashier Apps"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentang"
        android:textSize="12sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/penanda"
        android:textSize="12sp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>